--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,18 @@ venv/
 .venv/
 .env/
 
-# # Python
-# __pycache__/
-# *.pyc
+# Python
+__pycache__/
+*.pyc
 
-# # Django
-# db.sqlite3
-# media/
+# Django
+db.sqlite3
+media/
 
-# # IDEs
-# .vscode/
-# .idea/
+# IDEs
+.vscode/
+.idea/
 
-# # OS
-# .DS_Store
-# Thumbs.db
+# OS
+.DS_Store
+Thumbs.db
